EBL_v0.85/verticals/banking/generated/python/Banking_v0_85Parser.py
# Generated from verticals/banking/grammar/Banking_v0_85.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Banking_v0_85Parser ( Parser ):

    grammarFileName = "Banking_v0_85.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Metadata'", "':'", "'DataObject'", "'{'", 
                     "'Schema'", "'Policies'", "'Resources'", "'erMap'", 
                     "'}'", "','", "'-'", "'Input'", "'Output'", "'Channel'", 
                     "'Protocol'", "'Endpoint'", "'Auth'", "'Format'", "'SLA'", 
                     "'Entity'", "'dataRef'", "'Properties'", "'Rules'", 
                     "'type'", "'required'", "'unique'", "'default'", "'values'", 
                     "'['", "']'", "'ITAsset'", "'Kind'", "'Application'", 
                     "'System'", "'Platform'", "'Attributes'", "'Relationships'", 
                     "'('", "')'", "'Type'", "'Relationship'", "'From'", 
                     "'To'", "'Process'", "'Description'", "'ObjectiveID'", 
                     "'BusinessGoalID'", "'Actors'", "'Starts With'", "'Ends With'", 
                     "'Step'", "'Inputs'", "'Validation'", "'Condition'", 
                     "'Actions'", "'ErrorHandling'", "'.'", "'Partial'", 
                     "'<'", "'>'", "'Event'", "'Rule'", "'Trigger'", "'Conditions'", 
                     "'Report'", "'Query'", "'Schedule'", "'Integration'", 
                     "'Provider'", "'Credentials'", "'Operations'", "'UUID'", 
                     "'String'", "'Integer'", "'Currency'", "'Ratio'", "'Date'", 
                     "'Enum'", "'JSON'", "'Boolean'", "'SWIFT'", "'BIC'", 
                     "'CardNumber'", "'CVV'", "'AccountNumber'", "'min'", 
                     "'='", "'max'", "'masked'", "'encrypted'", "'pci_compliant'", 
                     "<INVALID>", "'IBAN'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'FEDWIRE'", "'CHAPS'", "'TARGET2'", "'CHIPS'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'DODD_FRANK'", "<INVALID>", 
                     "'FATCA'", "'FBAR'", "'T+0'", "'T+1'", "'T+2'", "<INVALID>", 
                     "'FIX_PROTOCOL'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SWIFT_CODE", "IBAN_CODE", "RTGS", "ACH", "SEPA", 
                      "FEDWIRE", "CHAPS", "TARGET2", "CHIPS", "PCI_DSS", 
                      "PII", "KYC", "AML", "CFT", "CARD_NETWORK", "EMV", 
                      "NFC", "TOKENIZATION", "PAN", "CVV_KEYWORD", "TRANSACTION_STATUS", 
                      "PAYMENT_METHOD", "APR", "APY", "DTI", "LTV", "FICO", 
                      "BASEL_III", "DODD_FRANK", "SOX", "FATCA", "FBAR", 
                      "T_PLUS_ZERO", "T_PLUS_ONE", "T_PLUS_TWO", "ISO20022", 
                      "FIX", "MT", "MX", "STRING", "TEXT", "ENUM", "UUID", 
                      "DATE", "NUMBER", "BOOLEAN", "IDENTIFIER", "NL", "WS", 
                      "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_eblDefinition = 0
    RULE_metadata = 1
    RULE_metadataField = 2
    RULE_dataObject = 3
    RULE_fieldDef = 4
    RULE_policyDef = 5
    RULE_resourceBlock = 6
    RULE_resourceDef = 7
    RULE_entity = 8
    RULE_property = 9
    RULE_propertyDef = 10
    RULE_propertyAttr = 11
    RULE_ruleStatement = 12
    RULE_itAsset = 13
    RULE_kvPair = 14
    RULE_relRef = 15
    RULE_relationshipDef = 16
    RULE_process = 17
    RULE_step = 18
    RULE_inputItem = 19
    RULE_validation = 20
    RULE_action = 21
    RULE_errorAction = 22
    RULE_output = 23
    RULE_typeDef = 24
    RULE_event = 25
    RULE_ruleDef = 26
    RULE_report = 27
    RULE_integration = 28
    RULE_operation = 29
    RULE_type = 30
    RULE_fieldAttr = 31
    RULE_value = 32

    ruleNames =  [ "eblDefinition", "metadata", "metadataField", "dataObject", 
                   "fieldDef", "policyDef", "resourceBlock", "resourceDef", 
                   "entity", "property", "propertyDef", "propertyAttr", 
                   "ruleStatement", "itAsset", "kvPair", "relRef", "relationshipDef", 
                   "process", "step", "inputItem", "validation", "action", 
                   "errorAction", "output", "typeDef", "event", "ruleDef", 
                   "report", "integration", "operation", "type", "fieldAttr", 
                   "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    SWIFT_CODE=92
    IBAN_CODE=93
    RTGS=94
    ACH=95
    SEPA=96
    FEDWIRE=97
    CHAPS=98
    TARGET2=99
    CHIPS=100
    PCI_DSS=101
    PII=102
    KYC=103
    AML=104
    CFT=105
    CARD_NETWORK=106
    EMV=107
    NFC=108
    TOKENIZATION=109
    PAN=110
    CVV_KEYWORD=111
    TRANSACTION_STATUS=112
    PAYMENT_METHOD=113
    APR=114
    APY=115
    DTI=116
    LTV=117
    FICO=118
    BASEL_III=119
    DODD_FRANK=120
    SOX=121
    FATCA=122
    FBAR=123
    T_PLUS_ZERO=124
    T_PLUS_ONE=125
    T_PLUS_TWO=126
    ISO20022=127
    FIX=128
    MT=129
    MX=130
    STRING=131
    TEXT=132
    ENUM=133
    UUID=134
    DATE=135
    NUMBER=136
    BOOLEAN=137
    IDENTIFIER=138
    NL=139
    WS=140
    LINE_COMMENT=141
    BLOCK_COMMENT=142

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class EblDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metadata(self):
            return self.getTypedRuleContext(Banking_v0_85Parser.MetadataContext,0)


        def EOF(self):
            return self.getToken(Banking_v0_85Parser.EOF, 0)

        def dataObject(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Banking_v0_85Parser.DataObjectContext)
            else:
                return self.getTypedRuleContext(Banking_v0_85Parser.DataObjectContext,i)


        def entity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Banking_v0_85Parser.EntityContext)
            else:
                return self.getTypedRuleContext(Banking_v0_85Parser.EntityContext,i)


        def itAsset(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Banking_v0_85Parser.ItAssetContext)
            else:
                return self.getTypedRuleContext(Banking_v0_85Parser.ItAssetContext,i)


        def process(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Banking_v0_85Parser.ProcessContext)
            else:
                return self.getTypedRuleContext(Banking_v0_85Parser.ProcessContext,i)


        def ruleDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Banking_v0_85Parser.RuleDefContext)
            else:
                return self.getTypedRuleContext(Banking_v0_85Parser.RuleDefContext,i)


        def relationshipDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Banking_v0_85Parser.RelationshipDefContext)
            else:
                return self.getTypedRuleContext(Banking_v0_85Parser.RelationshipDefContext,i)


        def report(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Banking_v0_85Parser.ReportContext)
            else:
                return self.getTypedRuleContext(Banking_v0_85Parser.ReportContext,i)


        def integration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Banking_v0_85Parser.IntegrationContext)
            else:
                return self.getTypedRuleContext(Banking_v0_85Parser.IntegrationContext,i)


        def getRuleIndex(self):
            return Banking_v0_85Parser.RULE_eblDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEblDefinition" ):
                listener.enterEblDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEblDefinition" ):
                listener.exitEblDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEblDefinition" ):
                return visitor.visitEblDefinition(self)
            else:
                return visitor.visitChildren(self)




    def eblDefinition(self):

        localctx = Banking_v0_85Parser.EblDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_eblDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.metadata()
            self.state = 68 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 67
                self.dataObject()
                self.state = 70 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3):
                    break

            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.entity()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 31)) & ~0x3f) == 0 and ((1 << (_la - 31)) & 156766315521) != 0):
                self.state = 83
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [31]:
                    self.state = 77
                    self.itAsset()
                    pass
                elif token in [44]:
                    self.state = 78
                    self.process()
                    pass
                elif token in [62]:
                    self.state = 79
                    self.ruleDef()
                    pass
                elif token in [41]:
                    self.state = 80
                    self.relationshipDef()
                    pass
                elif token in [65]:
                    self.state = 81
                    self.report()
                    pass
                elif token in [68]:
                    self.state = 82
                    self.integration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(Banking_v0_85Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetadataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(Banking_v0_85Parser.NL)
            else:
                return self.getToken(Banking_v0_85Parser.NL, i)

        def metadataField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Banking_v0_85Parser.MetadataFieldContext)
            else:
                return self.getTypedRuleContext(Banking_v0_85Parser.MetadataFieldContext,i)


        def getRuleIndex(self):
            return Banking_v0_85Parser.RULE_metadata

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetadata" ):
                listener.enterMetadata(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetadata" ):
                listener.exitMetadata(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetadata" ):
                return visitor.visitMetadata(self)
            else:
                return visitor.visitChildren(self)




    def metadata(self):

        localctx = Banking_v0_85Parser.MetadataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_metadata)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(Banking_v0_85Parser.T__0)
            self.state = 91
            self.match(Banking_v0_85Parser.T__1)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.match(Banking_v0_85Parser.NL)
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==139):
                    break

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==138:
                self.state = 97
                self.metadataField()
                self.state = 99 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 98
                    self.match(Banking_v0_85Parser.NL)
                    self.state = 101 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==139):
                        break

                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetadataFieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(Banking_v0_85Parser.IDENTIFIER, 0)

        def value(self):
            return self.getTypedRuleContext(Banking_v0_85Parser.ValueContext,0)


        def getRuleIndex(self):
            return Banking_v0_85Parser.RULE_metadataField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetadataField" ):
                listener.enterMetadataField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetadataField" ):
                listener.exitMetadataField(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetadataField" ):
                return visitor.visitMetadataField(self)
            else:
                return visitor.visitChildren(self)




    def metadataField(self):

        localctx = Banking_v0_85Parser.MetadataFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_metadataField)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(Banking_v0_85Parser.IDENTIFIER)
            self.state = 109
            self.match(Banking_v0_85Parser.T__1)
            self.state = 110
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(Banking_v0_85Parser.IDENTIFIER)
            else:
                return self.getToken(Banking_v0_85Parser.IDENTIFIER, i)

        def resourceBlock(self):
            return self.getTypedRuleContext(Banking_v0_85Parser.ResourceBlockContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(Banking_v0_85Parser.NL)
            else:
                return self.getToken(Banking_v0_85Parser.NL, i)

        def fieldDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Banking_v0_85Parser.FieldDefContext)
            else:
                return self.getTypedRuleContext(Banking_v0_85Parser.FieldDefContext,i)


        def policyDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Banking_v0_85Parser.PolicyDefContext)
            else:
                return self.getTypedRuleContext(Banking_v0_85Parser.PolicyDefContext,i)


        def getRuleIndex(self):
            return Banking_v0_85Parser.RULE_dataObject

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataObject" ):
                listener.enterDataObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataObject" ):
                listener.exitDataObject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataObject" ):
                return visitor.visitDataObject(self)
            else:
                return visitor.visitChildren(self)




    def dataObject(self):

        localctx = Banking_v0_85Parser.DataObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dataObject)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(Banking_v0_85Parser.T__2)
            self.state = 113
            self.match(Banking_v0_85Parser.IDENTIFIER)
            self.state = 114
            self.match(Banking_v0_85Parser.T__3)
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                self.match(Banking_v0_85Parser.NL)
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==139):
                    break

            self.state = 120
            self.match(Banking_v0_85Parser.T__4)
            self.state = 121
            self.match(Banking_v0_85Parser.T__1)
            self.state = 123 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 122
                self.match(Banking_v0_85Parser.NL)
                self.state = 125 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==139):
                    break

            self.state = 128 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 127
                self.fieldDef()
                self.state = 130 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==138):
                    break

            self.state = 132
            self.match(Banking_v0_85Parser.T__5)
            self.state = 133
            self.match(Banking_v0_85Parser.T__1)
            self.state = 135 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 134
                self.match(Banking_v0_85Parser.NL)
                self.state = 137 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==139):
                    break

            self.state = 140 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 139
                self.policyDef()
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==11):
                    break

            self.state = 144
            self.match(Banking_v0_85Parser.T__6)
            self.state = 145
            self.match(Banking_v0_85Parser.T__1)
            self.state = 147 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 146
                self.match(Banking_v0_85Parser.NL)
                self.state = 149 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==139):
                    break

            self.state = 151
            self.resourceBlock()
            self.state = 152
            self.match(Banking_v0_85Parser.T__7)
            self.state = 153
            self.match(Banking_v0_85Parser.T__1)
            self.state = 154
            self.match(Banking_v0_85Parser.IDENTIFIER)
            self.state = 156 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 155
                self.match(Banking_v0_85Parser.NL)
                self.state = 158 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==139):
                    break

            self.state = 160
            self.match(Banking_v0_85Parser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

